--- a/06-StdErrors.Rmd
+++ b/06-StdErrors.Rmd
@@ -9,101 +9,25 @@ How *confident* should we be about the estimated values $b$?
 </center>
 ```
 <br>
-Let's go back to the regression with one variable and remind ourselves of the example at the end of chapter \@ref(linreg). There we introduced the term *confidence interval*, shown as the shaded area in figure \@ref(fig:confint):
+We have already seen plots like \@ref(fig:confint) below. We have called the shaded area around the regression line as the *confidence interval* or *confidence band*. Now it's time to define properly what this shaded area tells us.
 
 ```{r confint,fig.align="center",message=FALSE,warning=FALSE,echo=FALSE,fig.cap="Confidence bands around a regression line."}
 library(ggplot2)
-library(Ecdat)
-p <- ggplot(mapping = aes(x = str, y = testscr), data = Caschool) # base plot
+data("wage1", package = "wooldridge")
+p <- ggplot(mapping = aes(x = educ, y = lwage), data = subset(wage1,educ > 5)) # base plot
 p <- p + geom_point() # add points
 p <- p + geom_smooth(method = "lm", size=1, color="red") # add regression line
-p <- p + scale_y_continuous(name = "Average Test Score") + 
-         scale_x_continuous(name = "Student/Teacher Ratio")
-p + theme_bw() + ggtitle("Testscores vs Student/Teacher Ratio")
+p <- p + scale_y_continuous(name = "log hourly wage") + 
+         scale_x_continuous(name = "years of education")
+p + theme_bw() + ggtitle("Log Wages vs Education")
 ```
   
-The shaded area shows us the region within which the **true** red line will lie with 95% probability. The fact that there is an unknown true line (i.e. a *true* slope coefficient $\beta_1$) that we wish to uncover from a sample of data should remind you immediately of our first tutorial. There, we wanted to estimate the true population mean from a sample of data, and we saw that as the sample size $N$ increased, our estimate got better and better - fundamentally this is the same idea here.
+The shaded area shows us the region within which the **true** red line will lie with 95% probability. The fact that there is an unknown true line (i.e. a *true* slope coefficient $\beta_1$) that we wish to uncover from a sample of data should remind you immediately of our first tutorial. There, we wanted to estimate the true population mean from a sample of data, and we saw that as the sample size $N$ increased, our estimate got better and better - fundamentally, this is the same idea here.
 
-## What is *true*? What are Statistical Models?
-
-A **statistical model** is simply a set of assumptions about how some data have been generated. As such, it models the  data-generating process (DGP), as we have it in mind. Once we define a DGP, we could simulate data from it and see how this compares to the data we observe in the real world. Or, we could change the parameters of the DGP so as to understand how the real world data *would* change, could we (or some policy) change the corresponding parameters in reality. Let us now consider one particular statistical model, which in fact we have seen so many times already.
-
- 
-
-## The Classical Regression Model {#class-reg}
-
-Let's bring back our simple model \@ref(eq:abline) to explain this concept.
+Before delving into further details about this confidence band, we have to make quick detour to statistical sampling and hypothesis tests. We will first give the classical theory, so you know where to look up the formula and how to compute the objects yourself, if needed. Then, we will do a simulation study and make sure all of this is easy to understand. Ready? Go!
 
 
-\begin{equation}
-y_i = \beta_0 + \beta_1 x_i + \varepsilon_i (\#eq:abline-5)
-\end{equation}
-
-The smallest set of assumptions used to define the *classical regression model* as in \@ref(eq:abline-5) are the following:
-
-1. The data are **not linearly dependent**: Each variable provides new information for the outcome, and it cannot be replicated as a linear combination of other variables. We have seen this in section \@ref(multicol). In the particular case of one regressor, as here, we require that $x$ exhibit some variation in the data, i.e. $Var(x)\neq 0$.
-1. The mean of the residuals conditional on $x$ should be zero, $E[\varepsilon|x] = 0$. Notice that this also means that $Cov(\varepsilon,x) = 0$, i.e. that the errors and our explanatory variable(s) should be *uncorrelated*. It is said that $x$ should be **strictly exogenous** to the model.
-
-These assumptions are necessary to successfully (and correctly!) run an OLS regression. They are often supplemented with an additional set of assumptions, which help with certain aspects of the exposition, but are not strictly necessary:
-
-3. The data are drawn from a **random sample** of size $n$: observation $(x_i,y_i)$ comes from the exact same distribution, and is independent of observation $(x_j,y_j)$, for all $i\neq j$.
-4. The variance of the error term $\varepsilon$ is the same for each value of $x$: $Var(\varepsilon|x) = \sigma^2$. This property is called **homoskedasticity**.
-5. The error is normally distributed, i.e. $\varepsilon \sim \mathcal{N}(0,\sigma^2)$
-
-Invoking assumption 5. in particular defines what is commonly called the *normal* linear regression model.
-
-
-### $b$ is not $\beta$!
-
-Let's talk about the small but important modifications we applied to  model \@ref(eq:abline) to end up at \@ref(eq:abline-5) above:
-
-* $\beta_0$ and $\beta_1$ and intercept and slope parameters
-* $\varepsilon$ is the error term.
-
-First, we *assumed* that \@ref(eq:abline-5) is the correct represenation of the DGP. With that assumption in place, the values $\beta_0$ and $\beta_1$ are the *true parameter values* which generated the data. Notice that $\beta_0$ and $\beta_1$ are potentially different from $b_0$ and $b_1$ in \@ref(eq:abline) for a given sample of data - they could in practice be very close to each other, but $b_0$ and $b_1$ are *estimates* of $\beta_0$ and $\beta_1$. And, crucially, those estimates are generated from a sample of data. Now, the fact that our data $\{y_i,x_i\}_{i=1}^N$ are a sample from a larger population, means that there will be *sampling variation* in our estimates - exactly like in the case of the sample mean estimating the population average as mentioned above. One particular sample of data will generate one particular set of estimates $b_0$ and $b_1$, whereas another sample of data will generate estimates which will in general be different - by *how much* those estimates differ across samples is the question in this chapter. In general, the more observations we have the greater the precision of our estimates, hence, the closer the estimates from different samples will lie together.
-
-
-### Standard Errors in Theory {#se-theory}
-
-The standard deviation of the OLS parameters is generally called *standard error*. As such, it is just the square root of the parameter's variance.
-Under assumptions 1. through 4. we can define the formula for the variance of our slope coefficient in the context of our single regressor model \@ref(eq:abline-5) as follows: 
-
-\begin{equation}
-Var(b_1|x_i) = \frac{\sigma^2}{\sum_i^N (x_i - \bar{x})^2}  (\#eq:var-ols)
-\end{equation}
-
-In pratice, we don't know the theoretical variance of $\varepsilon$, i.e. $\sigma^2$, but we form an estimate about it from our sample of data. A widely used estimate uses the already encountered SSR (sum of squared residuals), and is denoted $s^2$:
-
-$$
-s^2 = \frac{SSR}{n-p} = \frac{\sum_{i=1}^n (y_i - b_0 - b_1 x_i)^2}{n-p} =  \frac{\sum_{i=1}^n e_i^2}{n-p}
-$$
-where $n-p$ are the *degrees of freedom* available in this estimation. $p$ is the number of parameters we wish to estimate (here: 1). So, the variance formula would become
-
-\begin{equation}
-Var(b_1|x_i) = \frac{SSR}{(n-p)\sum_i^N (x_i - \bar{x})^2}  (\#eq:var-ols2)
-\end{equation}
-
-We most of the time work directly with the *standard error* of a coefficient, hence we define
-
-\begin{equation}
-SE(b_1) = \sqrt{Var(b_1|x_i)} = \sqrt{\frac{SSR}{(n-p)\sum_i^N (x_i - \bar{x})^2}}  (\#eq:SE-ols2)
-\end{equation}
-
-You can clearly see that, as $n$ increases, the denominator increases, and therefore variance and standard error of the estimate will decrease.
-
-### Standard Errors in Practice
-
-We would like to further make this point in an experiential way, i.e. we want you to experience what is going on. We invite you to spend some time with the following apps. In particular, make sure you have a thorough understanding of `launchApp("estimate")`.
-
-```{r,eval=FALSE}
-library(ScPoEconometrics)
-launchApp("estimate")
-launchApp("sampling")  
-launchApp("standard_errors_simple") 
-launchApp("standard_errors_changeN") 
-```
-
-## Back to Sampling
+## Inference in Theory
 
 ```{r testing,echo=FALSE}
 s = 10
@@ -233,10 +157,8 @@ CI = \left[`r round(xbar - qt(0.975,df=n-1)* s/sqrt(n),3)` , `r round(xbar + qt(
 
 We would tell the director that with 95% probability, the true average height of all students comes to lie within those two bounds.
 
-Finally, looking back at figure \@ref(fig:confint) above, the shaded area is just the 95% confidence interval *about the true value $\beta_1$*. We would say that *the true regression line* is contained within the shaded region with 95% probability. Very similarly to our example of $\bar{x}$, in that picture we have instead an estimate $b_1$, with an associated standard error $SE(b_1)$. The shaded area is called *confidence band*, and it is just plotting the confidence interval *for each value $x$* in the data. You can see how the band becomes narrower (i.e. the estimate becomes more precise) if there is more data associated to a certain $x$.
 
-
-## Hypothesis Testing
+### Hypothesis Testing
 
 Now know by now how the standard errors of an OLS estimate are computed, and what they stand for. We can now briefly^[We will not go into great detail here. Please refer back to your statistics course from last spring semester (chapters 8 and 9), or the short note I [wrote while ago](images/hypothesis.pdf) ] discuss a very common usage of this information, in relation to which variables we should include in our regression. There is a statistical proceedure called *hypothesis testing* which helps us to make such decisions.
 In [hypothesis testing](https://en.wikipedia.org/wiki/Statistical_hypothesis_testing), we have a baseline, or *null* hypothesis $H_0$, which we want to confront with a competing *alternative* hypthesis $H_1$. Continuing with our example of the mean height of SciencesPo students ($\mu$), one potential hypothesis could be
@@ -323,6 +245,265 @@ node[above] {$f(\bar{x}|\mu=167)$}; % y-axis
 \draw (2,0.02) -- (2.4,0.1) node[above] {$\alpha = 0.05$};
 \end{tikzpicture} 
 ```
+
+You can see from this that whether or not our test statistic is far way from the critical value, or just below does not change our decision: it's either accept or reject. We never know if we *narrowly* rejected a $H_0$, or not. P-values are an improvement over this stark dichotomy. The p-value is defined as the particular level of significance $\alpha^*$, up to which *all* $H_0$'s would be rejected. If this is a very small number, we have overwhelming support to reject the null. If, on the contrary, $\alpha^*$ turns out to be rather large, we only found weak evidence against $H_0$.
+
+We define the p-value as the sum of rejection areas for a given test statistic $T^*$. Notice that the symmetry of the $t$ distribution implies that we would multiply by two each of the two tail probabilities in the case of a two-sided test.
+
+\begin{align}
+\alpha^* = \Pr(t > |T^*|) 
+\end{align}
+
+## Inference via Bootstrap
+
+We will now take the ideas from the previous section and illustrate them using one single powerful idea. Instead of relying on some *population distribution* from which our samples of data have been drawn, we can regard the sampling distribution itself as the population distribution, and take samples *from* it. Our discussion in the previous section *relied* on a tight connection between sampling and population distribution - how else could we have inferred anything about the population from looking at our sample? We will take this idea to its extreme now and look *only* at the sampling distribution. This idea is a *resampling* technique, commonly referred to as the *Bootstrap*.
+
+```{block type = "warning"}
+**Bootstrapping** is a test or metric that relies on *resampling with replacement*. It allows estimation of the sampling distribution of almost any statistic using random sampling methods.
+```
+
+### How does the Bootstrap work?
+
+This best to show with an example. Suppose we had stored our `R n` measurements of students heights from figure \@ref(fig:heightdata) above in the variable `height`
+
+```{r}
+head(height)
+```
+
+and let's suppose we want to figure out the distribution of the sample mean $\bar{height}$ here. We will now compute the mean of `height` repeatedly, each time collecting the result in a vector:
+
+```{r}
+r = c()
+R = 200
+for (ib in 1:R){
+  bs = sample(height,size = 10,replace = TRUE)  # bootstrap sample
+  r = c(r,mean(bs))  # add to results vector
+}
+```
+
+How are `r R` means we have computed distributed? Do they all have the same value? Different? How?
+
+```{r hists-x,echo = FALSE,fig.cap="The Distribution of 200 means of `height`, where each version was obtained by resampling from `height` with replacement. The red line indicates the *true* mean from the original sample of `height`."}
+hist(r,main = "Histogram of Means of Height",xlab = "Mean of Height")
+abline(v = mean(height),col = "red",lw=2)
+```
+
+Well, this is very similar to a normal distribution, isn't it?^[In particular, notice that is *not* the same histogram as the one in figure \@ref(fig:heightdata) above. Here we see the *means* of height, whereas above we plotted the raw data values.] You should remember that above, for example in figure \@ref(fig:cifig), we had derived a *theoretical* sampling distribution. Relying on statistical theory, we learned that a certain test statistic will be distributed according to a certain distribution (students's t, or normal, for instance), and that we could use that knowledge to construct confidence intervals and hypothesis tests. Well, what you are seeing in figure \@ref(fig:hists-x) is the bootstrapped counterpart to that theoretical distribution. It's the *simulated proof* that the sampling distribution of the mean is indeed the normal distribution. The advantage here is that we did not need to rely on *any* theory at all, just simple resampling.
+
+### Bootstrapped Confidence Intervals
+
+Let's redo what we did above with the bootstrap. We will use the brilliant [infer](https://github.com/tidymodels/infer) package to have some fun with this.
+
+```{r}
+library(infer)
+hdf = data.frame(height)   # needs a data.frame
+boot <- hdf %>%
+   specify(response = height) %>%   # specify repsonse
+   generate(reps = 1000, type = "bootstrap") %>%   # generate BS samples
+   calculate(stat = "mean")   # calculate statistic of interest
+( percentile_ci <- get_ci(boot) )   # get CI
+```
+
+You note that this is reasonably close to the confidence interval about our sample mean we obtained above, which was $$\left[`r round(xbar - qt(0.975,df=n-1)* s/sqrt(n),3)` , `r round(xbar + qt(0.975,df=n-1)* s/sqrt(n),3)` \right]$$
+
+What is really cool is the visualization:
+
+```{r boot-ci, fig.cap="Simulate Distribution under Null Hypothesis together with a 95% confidence region"}
+visualize(boot) +
+  shade_confidence_interval(endpoints = percentile_ci) + theme_bw()
+```
+
+
+In figure \@ref(fig:boot-ci) we see that each value of a sample mean within the green shaded area would lie within a 95% confidence region about the location of the true *population* mean. 
+
+We can also repeat our hypothesis test from above with the help of the bootstrap. The hypothesis were
+
+\begin{align}
+H_0:& \mu = `r mu`\\
+H_1:& \mu > `r mu`.
+\end{align}
+
+
+```{r H0-height, fig.cap = "One sided hypothesis test with bootstrap."}
+H0_height <- hdf %>%
+   specify(response = height) %>%   # specify repsonse
+   hypothesize(null = "point", mu = 167) %>%  # spell out H0
+   generate(reps = 1000, type = "bootstrap") %>%   # generate BS samples
+   calculate(stat = "mean")   # calculate statistic of interest
+
+visualize(H0_height) +
+  shade_p_value(obs_stat = xbar, direction = "right") + theme_bw()
+```
+
+In figure \@ref(fig:H0-height) we see the simulated distribution under the Null, i.e. the one where indeed $\mu = `r mu`$. The red vertical line is the value of our calculated test statistic, which was `r xbar`. The shaded area shows is the corresponding level of significance that we would have to adopt, would we want to reject H0 on the grounds of having observed `\bar{x} = r xbar`. The size of the red-shaded area is *p-value* of this test. It's easy to compute from this object via
+
+```{r}
+pval = H0_height %>%
+  get_p_value(obs_stat = xbar, direction = "right")
+pval
+```
+
+This means that had we adopt a significance level of $\alpha = `r pval`$, we would (just!) been able to reject the Null hypthesis. Now you remember that $\alpha$ is the probability of a Type 1 Error. So, we would have to be happy to make a wrong decision (i.e. to reject when in fact we should not) in about `r round(pval,2)`% of all cases. So, as above, we probably conclude that this is pretty weak evidence against H0, and we cannot reject it based on this evidence.
+
+It's illustrative to reason about how this picture changes as we change the hypothesized value. Suppose we change our hypothesis to 
+
+\begin{align}
+H_0:& \mu = 164\\
+H_1:& \mu > 164.
+\end{align}
+
+```{r H0-height2, fig.cap = "One sided hypothesis test with bootstrap and different hypothesis."}
+H0_height <- hdf %>%
+   specify(response = height) %>%   # specify repsonse
+   hypothesize(null = "point", mu = 164) %>%  # spell out H0
+   generate(reps = 1000, type = "bootstrap") %>%   # generate BS samples
+   calculate(stat = "mean")   # calculate statistic of interest
+
+visualize(H0_height) +
+  shade_p_value(obs_stat = xbar, direction = "right") + theme_bw()
+```
+
+
+The concept is astonishingly simple. It's best to illustrate with an example from the [ungeviz](https://github.com/wilkelab/ungeviz) package.^[this is based on `help(bootstrapper,package = "ungeviz")`] Here is a dataset:
+
+```{r}
+set.seed(1)
+n = 10  # data points
+x = rnorm(n)
+df <- data.frame(x,y = x + 0.5*rnorm(n))
+plot(y~x,data=df)
+grid()
+```
+
+Now we are going to randomly choose rows of this dataframe, `n` at a time, but with replacement. One way to achieve this is via
+
+```{r, eval = FALSE}
+dplyr::sample_n(df, size = n, replace = TRUE)
+```
+
+which would generate one reshuffled sample of `df`. We repeat this for $R$ draws, and each time we calculate the statistic we are interested in. The mean of `x`, mean of `y`, whatever. Let's compute the OLS slope coefficient instead, just another statistic, and let's just take a small number of draws, $R=9$:
+
+```{r ungeviz-demo,echo = FALSE,fig.height = 8}
+library(ungeviz)
+bs <- bootstrapper(9)
+p <- ggplot(df, aes(x, y)) +
+geom_point(shape = 21, size = 6, fill = "white") +
+geom_text(label = "0", hjust = 0.5, vjust = 0.5, size = 10/.pt) +
+geom_point(data = bs, aes(group = .row), shape = 21, size = 6, fill = "blue") +
+geom_text(
+data = bs, aes(label = .copies, group = .row),
+hjust = 0.5, vjust = 0.5, size = 10/.pt, color = "white"
+) +
+geom_smooth(data = bs, method = "lm", se = FALSE, color = "red") +
+ggtitle("Bootstrap demonstration") +
+theme_bw()
+p + facet_wrap(~.draw)
+```
+ 
+
+
+## What is *true*? What are Statistical Models?
+
+A **statistical model** is simply a set of assumptions about how some data have been generated. As such, it models the  data-generating process (DGP), as we have it in mind. Once we define a DGP, we could simulate data from it and see how this compares to the data we observe in the real world. Or, we could change the parameters of the DGP so as to understand how the real world data *would* change, could we (or some policy) change the corresponding parameters in reality. Let us now consider one particular statistical model, which in fact we have seen so many times already.
+
+ 
+
+## The Classical Regression Model (CRM) {#class-reg}
+
+Let's bring back our simple model \@ref(eq:abline) to explain this concept.
+
+\begin{equation}
+y_i = \beta_0 + \beta_1 x_i + \varepsilon_i (\#eq:abline-5)
+\end{equation}
+
+The smallest set of assumptions used to define the *classical regression model* as in \@ref(eq:abline-5) are the following:
+
+1. The data are **not linearly dependent**: Each variable provides new information for the outcome, and it cannot be replicated as a linear combination of other variables. We have seen this in section \@ref(multicol). In the particular case of one regressor, as here, we require that $x$ exhibit some variation in the data, i.e. $Var(x)\neq 0$.
+1. The mean of the residuals conditional on $x$ should be zero, $E[\varepsilon|x] = 0$. Notice that this also means that $Cov(\varepsilon,x) = 0$, i.e. that the errors and our explanatory variable(s) should be *uncorrelated*. It is said that $x$ should be **strictly exogenous** to the model.
+
+These assumptions are necessary to successfully (and correctly!) run an OLS regression. They are often supplemented with an additional set of assumptions, which help with certain aspects of the exposition, but are not strictly necessary:
+
+3. The data are drawn from a **random sample** of size $n$: observation $(x_i,y_i)$ comes from the exact same distribution, and is independent of observation $(x_j,y_j)$, for all $i\neq j$.
+4. The variance of the error term $\varepsilon$ is the same for each value of $x$: $Var(\varepsilon|x) = \sigma^2$. This property is called **homoskedasticity**.
+5. The error is normally distributed, i.e. $\varepsilon \sim \mathcal{N}(0,\sigma^2)$
+
+Invoking assumption 5. in particular defines what is commonly called the *normal* linear regression model.
+
+
+### $b$ is not $\beta$!
+
+Let's talk about the small but important modifications we applied to  model \@ref(eq:abline) to end up at \@ref(eq:abline-5) above:
+
+* $\beta_0$ and $\beta_1$ and intercept and slope parameters
+* $\varepsilon$ is the error term.
+
+First, we *assumed* that \@ref(eq:abline-5) is the correct represenation of the DGP. With that assumption in place, the values $\beta_0$ and $\beta_1$ are the *true parameter values* which generated the data. Notice that $\beta_0$ and $\beta_1$ are potentially different from $b_0$ and $b_1$ in \@ref(eq:abline) for a given sample of data - they could in practice be very close to each other, but $b_0$ and $b_1$ are *estimates* of $\beta_0$ and $\beta_1$. And, crucially, those estimates are generated from a sample of data. Now, the fact that our data $\{y_i,x_i\}_{i=1}^N$ are a sample from a larger population, means that there will be *sampling variation* in our estimates - exactly like in the case of the sample mean estimating the population average as mentioned above. One particular sample of data will generate one particular set of estimates $b_0$ and $b_1$, whereas another sample of data will generate estimates which will in general be different - by *how much* those estimates differ across samples is the question in this chapter. In general, the more observations we have the greater the precision of our estimates, hence, the closer the estimates from different samples will lie together.
+
+
+
+### Violating the Assumptions of the CRM
+
+It's interesting to consider in which circumstances we might violate those assumptions. Let's give an example for each of them:
+
+1. No Perfect Collinearity. We have seen that a perfect collinearity makes it impossible to compute to OLS coefficients. Remember the example about adding `wtplus = wt + 1` to the `mtcars` dataset? Here it is:
+    ```{r,warning = FALSE, message = FALSE}
+    library(dplyr)
+    mtcars %>%
+    mutate(wtplus = wt + 1) %>%
+    lm(mpg ~ wt + wtplus, data = .)
+    ```
+    That the coefficient on `wtplus` is `NA` is the result of the direct linear dependence. (Notice that creating `wtplus2 = (wt + 1)^2`) would work, since that is not linear!)
+1. Conditional Mean of errors is zero, $E[\varepsilon|x] = 0$. Going back to our running example in figure \@ref(fig:confint) about wages and education: Suppose that each individual $i$ in our data  something like *innate ability*, something we might wish to measure with an IQ-test, however imperfecty. Let's call it $a_i$. It seems reasonable to think that high $a_i$ will go together with high wages. At the same time, people with high $a_i$ will find studying for exams and school work much less burdensome than others, hence they might select into obtaining more years of schooling. The problem? Well, there is no $a_i$ in our regression equation - most of time we don't have a good measure of it to start with. So it's an *unobserved variable*, and as such, it is part of the error term $\varepsilon$ in our model. We will attribute to `educ` part of the effect on wages that is actually *caused* by ability $a_i$! Sometimes we may be able to reason about whether our estimate on `educ` is too high or too low, but we will never know it's true value. We don't get the *ceteris paribus* effect (the true partial derivative of `educ` on `lwage`). Technically, the assumption $E[\varepsilon|x] = 0$ implies that $Cov(\varepsilon,x) = 0$, so that's the part that is violated.
+1. Data from Random Sample. One common concern here is that the observations in the data could have been *selected* in a particular fashion, which would make it less representative of the underlying population. Suppose we had ended up with individuals only from the richest neighborhood of town; Our interpretation the impact of education on wages might not be valid for other areas.
+1. Homoskedasticity. For correct inference (below!), we want to know whether the variance of $\varepsilon$ varies with our regressor $x$ or not. Here is a typical example where it does:
+    ```{r,echo = FALSE}
+    data("engel",package = "quantreg")
+    plot(foodexp ~ log(income) ,data = engel,main = "Food Expenditure vs Log(income)")
+    ```
+    As income increases, not all people increase their food consumption in an equal way. So $Var(\varepsilon|x)$ will vary with the value of $x$, hence it won't be equal to the constant $\sigma^2$. 
+1. If the distribution of $\varepsilon$ is not normal, it is more cumbersome to derive theoretical results about inference. 
+
+
+## Standard Errors in Theory {#se-theory}
+
+The standard deviation of the OLS parameters is generally called *standard error*. As such, it is just the square root of the parameter's variance.
+Under assumptions 1. through 4. above we can define the formula for the variance of our slope coefficient in the context of our single regressor model \@ref(eq:abline-5) as follows: 
+
+\begin{equation}
+Var(b_1|x_i) = \frac{\sigma^2}{\sum_i^N (x_i - \bar{x})^2}  (\#eq:var-ols)
+\end{equation}
+
+In pratice, we don't know the theoretical variance of $\varepsilon$, i.e. $\sigma^2$, but we form an estimate about it from our sample of data. A widely used estimate uses the already encountered SSR (sum of squared residuals), and is denoted $s^2$:
+
+$$
+s^2 = \frac{SSR}{n-p} = \frac{\sum_{i=1}^n (y_i - b_0 - b_1 x_i)^2}{n-p} =  \frac{\sum_{i=1}^n e_i^2}{n-p}
+$$
+where $n-p$ are the *degrees of freedom* available in this estimation. $p$ is the number of parameters we wish to estimate (here: 1). So, the variance formula would become
+
+\begin{equation}
+Var(b_1|x_i) = \frac{SSR}{(n-p)\sum_i^N (x_i - \bar{x})^2}  (\#eq:var-ols2)
+\end{equation}
+
+We most of the time work directly with the *standard error* of a coefficient, hence we define
+
+\begin{equation}
+SE(b_1) = \sqrt{Var(b_1|x_i)} = \sqrt{\frac{SSR}{(n-p)\sum_i^N (x_i - \bar{x})^2}}  (\#eq:SE-ols2)
+\end{equation}
+
+You can clearly see that, as $n$ increases, the denominator increases, and therefore variance and standard error of the estimate will decrease.
+
+### Standard Errors in Practice
+
+We would like to further make this point in an experiential way, i.e. we want you to experience what is going on. We invite you to spend some time with the following apps. In particular, make sure you have a thorough understanding of `launchApp("estimate")`.
+
+```{r,eval=FALSE}
+library(ScPoEconometrics)
+launchApp("estimate")
+launchApp("sampling")  
+launchApp("standard_errors_simple") 
+launchApp("standard_errors_changeN") 
+```
+
 
 ### Testing Regression Coefficients
 
