--- a/06-StdErrors.Rmd
+++ b/06-StdErrors.Rmd
@@ -18,10 +18,86 @@ In order to fully understand this, we need to go back and make sure we have a go
 
 ## Sampling
 
-Let's start this chapter with a discussion about [sampling as given here](https://moderndive.com/7-sampling.html).
+In class we were confronted with a jar of Tricolore Fusilli pasta as picture in figure \@ref(fig:pasta1).^[This part is largely based on [moderndive](https://moderndive.com/7-sampling.html), to which I am giving full credit hereby. Thanks for this great idea.] We asked ourselves a question which, secretly, many of you had asked themselves at one point in their lives, namely:
+
+```{block type = "tip"}
+What is the proportion of **green** Fusilli in a pack of Tricolore Fusilli?
+```
+<br>
+
+Well, it's time to find out.
+
+```{r pasta1, fig.cap="A glass jar filled with Fusilli pasta in three different colors.",echo = FALSE, out.width = "700px"}
+knitr::include_graphics("images/pasta1.JPG")
+```
 
 
+Let's call the fusilly in this jar our *study population*, i.e. the set of units about which we want to learn something. There are several approaches to address the question of how big a proportion in the population the green Fusilli make up. One obvious solution is to enumerate all Fusilli according to their color, and compute their proportion in the entire population. It works perfectly well as a solution, but is a long and arduous process, see figures \@ref(fig:pasta2) and  \@ref(fig:pasta3). 
 
+```{r pasta2, fig.cap="Manually separating Fusilli by their color is very costly in terms of effort and cost.",echo = FALSE,fig.width = 8, out.width = "700px"}
+knitr::include_graphics("images/pasta2.JPG")
+```
+
+Additionally, you may draw worried looks from the people around you, while you are doing it. Maybe this is not the right way to approach this task?^[Regardless of the worried onlookers, I did what I had to do and I carried on to count the green pile. I know exactly how many greens are in there now! I then computed the weight of 20 Fusilli (5g), and backed out the number of Fusilli in the other piles. I will declare those numbers as the *true numbers*. (Sceptics are free to recount.)]
+
+```{r pasta3, fig.cap="Heaps of Fusilli pasta ready to be counted.",echo = FALSE, out.width = "700px"}
+knitr::include_graphics("images/pasta3.JPG")
+```
+
+### Taking One Sample From the Population
+
+We started by randomly grabbing a handful of Fusilli from the jar and by letting drop exactly $N=20$ into a paper coffee cup, pictured in \@ref(fig:pasta5). We call $N$ the *sample size*. The count and corresponding proportions of each color in this first sample are shown in the following table:
+
+Color | Count | Proportion
+:------:|:------:|:--------:
+Red   |  7        |  0.35
+Green   |  5     |   0.25
+White   |  8    |     0.4
+
+So far, so good. We have our first *estimate of the population proportion of green Fusilli in the overall population*: 0.25. Notice that taking a sample of $N=20$ was *much* quicker and *much less painful* than performing the full count (i.e. the *census*) of Fusilli performed above. 
+
+```{r pasta5, fig.cap="Taking one sample of 20 Fusilli from the jar.",echo = FALSE, out.width = "700px"}
+knitr::include_graphics("images/pasta5.JPG")
+```
+
+Then, we put my sample back into the jar, and we reshuffled the Fusilli. Had we taken *another* sample, again of $N=20$, would we again have gotten 7 Red, 5 Green, and 8 White, just as in the first sample? Maybe, but maybe not. Suppose we had carried on for several times drawing samples of 20 and counting the colors: Would we also have observed 5 green Fusilli? Definitely not. We would have noted some degree of *variability* in the proportions computed from our samples. The *sample proportions* in this case are an example of a *sample statistic*.
+
+```{block type = "note"}
+**Sampling Variation** refers to the fact that if we *randomly* take samples from a wider population, the *random* composition of each sample will imply that we obtain statistics that vary - they take on potentially different values in each sample.
+```
+
+
+Let's see how this story evolved as we started taking more samples at a time. 
+
+## Taking Eleven Samples From The Population
+
+We formed teams of two students in class who would each in turn take samples from the jar (the population) of size $N=20$, as before. Each team computed the proportion of green Fusilli they had in their sample, and we wrote this data down in a table on the board. Then, we drew a histogram which showed how many samples had fallen into which bins. 
+
+```{r pasta6, fig.cap="Taking eleven samples of 20 Fusilli each from the jar, and plotting the histogram of obtained sample proportions of Green Fusilli.",echo = FALSE, out.width = "700px"}
+knitr::include_graphics("images/pasta6.JPG")
+```
+
+We looked at the histogram in figure \@ref(fig:pasta6) and we noted several things:
+
+1. The largest proportions where 0.3 green
+1. The smallest proportion was 0.15 green.
+1. Most samples found a proportion of 0.25 green fusilli.
+1. We did think that this looked *suspiciouly* like a **normal distribution**. 
+
+We collected the sample data into a data.frame:
+
+```{r sample-data}
+pasta_samples <- data.frame(group = 1:11, replicate = 1:11, prop_green = c(0.3,0.25,0.25,0.3,0.15,0.3,0.25,0.25,0.2,0.25,0.2))
+pasta_samples
+```
+
+This produces an associated histogram like
+
+```{r pasta-hist,echo = FALSE}
+hist(pasta_samples$prop_green,breaks = c(0.125,0.175,0.225,0.275,0.325),main = "Histogram of 11 Pasta Samples", xlab = "Proportion of Green Fusilli")
+```
+
+### Recap
 
 ## Inference in Theory
 
